--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bing Maps Example</title>
-    <link rel="stylesheet" type="text/css" href="styles/index.css">
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
     <div id="mapComponent"></div>
 
-    <script type="text/javascript" src="scripts/getMap.js"></script>
+    <script src="scripts/getMap.js"></script>
 </body>
 </html>
