--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bing Maps Example</title>
-    <link rel="stylesheet" href="styles/index.css">
+  <title>Bing Maps Project</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="mapComponent"></div>
+  <div id="map" class="center"></div>
 
-    <script src="scripts/getMap.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
